chore: Remove shiki dependency from project.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "highlight.js": "^11.11.1",
     "monaco-editor": "^0.52.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "shiki": "^3.5.0"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.0",
